<resources>
    <string name="app_name">Face Hide</string>
    <string name="image">Image</string>
    <string name="gallery">Gallery</string>
    <string name="from_url">From Url</string>
    <string name="take_a_shot">Take a Shot</string>
    <string name="select_photo">Select photo</string>
    <string name="save">Save</string>
    <string name="please_wait">Please, wait...</string>
    <string name="view">View</string>
    <string name="photo_saved">Photo saved</string>
    <string name="save_photo">Save Photo</string>
    <string name="settings">Settings</string>
    <string name="no_photo">No photo</string>
    <string name="no_sd_card">No sd card</string>
    <string name="no_enough_space">No enough space</string>
    <string name="cancel">Cancel</string>
    <string name="view_using">View using</string>
    <string name="image_view_application_not_found">Image view application not found</string>
    <string name="name">File Name</string>
    <string name="failed_to_read_photo">Failed to read photo</string>
    <string name="failed_to_find_faces_on_photo">Failed to find faces on photo</string>
    <string name="remove_emoji">Remove Emoji</string>
    <string name="select_emoji">Select Emoji</string>
    <string name="yes">Yes</string>
    <string name="add_emoji_automatically">Add emoji automatically</string>
    <string name="no">No</string>
    <string name="close">Close</string>
    <string name="icon_made_by_twitter_from_www_flaticon_com">Icons made by Twitter from www.flaticon.com</string>
    <string name="share_with">Share with</string>
    <string name="share_photo">Share Photo</string>
    <string name="share">Share</string>
</resources>
