<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/dialog_bg"
        android:orientation="vertical"
        android:padding="24dp">

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/photo_saved"
            android:textAppearance="?textAppearanceHeadline5"
            app:fontFamily="@font/robotomono_regular" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/pathView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:textAppearance="?textAppearanceSubtitle1"
            app:fontFamily="@font/robotomono_regular"
            tools:text="file.jpg" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:layout_marginTop="16dp"
            android:orientation="horizontal">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/cancelButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/close"
                app:backgroundTint="@color/colorAccent"
                app:fontFamily="@font/robotomono_regular" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/viewButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:text="@string/view"
                app:backgroundTint="@color/colorAccent"
                app:fontFamily="@font/robotomono_regular" />
        </LinearLayout>
    </LinearLayout>
</layout>