<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/dialog_bg"
        android:orientation="vertical"
        android:padding="24dp">

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/settings"
            android:textAppearance="?textAppearanceHeadline5"
            app:fontFamily="@font/robotomono_regular" />

        <LinearLayout
            android:id="@+id/autoButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:background="?selectableItemBackground"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:paddingTop="8dp"
            android:paddingBottom="8dp">

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/add_emoji_automatically"
                android:textAppearance="?textAppearanceSubtitle1"
                android:textColor="#ffffff"
                android:textSize="18sp"
                app:fontFamily="@font/robotomono_regular" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/autoFaceState"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:text="@string/yes"
                android:textAllCaps="true"
                android:textAppearance="?textAppearanceHeadline6"
                android:textColor="#ffffff"
                app:fontFamily="@font/robotomono_bold" />

            <androidx.appcompat.widget.AppCompatImageView
                android:layout_width="16dp"
                android:layout_height="16dp"
                android:layout_marginStart="16dp"
                android:scaleType="centerInside"
                app:srcCompat="@drawable/ic_arrow_point_to_right"
                app:tint="#ffffff" />

        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/colorDivider" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:orientation="horizontal">

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/app_name"
                android:textAppearance="?textAppearanceSubtitle2"
                android:textColor="#ffffff"
                app:fontFamily="@font/robotomono_regular" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/versionView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                tools:text="1.0.0"
                android:textAllCaps="true"
                android:textAppearance="?textAppearanceSubtitle1"
                android:textColor="#ffffff"
                app:fontFamily="@font/robotomono_bold" />

        </LinearLayout>

    </LinearLayout>
</layout>